# rterminal

./: LICENSE  README.md  package-lock.json  package.json
src/: App.scss  App.tsx  main.tsx  theme.tsx
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: keystroke_sender.rs  lib.rs  main.rs  shortcut_parser.rs  wininfo.rs
src/AutocompleteCode/: AutoWidthTextField.tsx  AutocompleteCode.tsx  autocomplete.scss  debounce.tsx  gemini.tsx  localSuggestions.tsx
src/assets/: baselist.json
