[package]
name = "rterminal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[package.metadata.tauri.bundle.resources]
files = ["config.json"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rterminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.0"
log = "0.4"
tauri-plugin-log = "2.6.0"
enigo = "0.6.1"
active-win-pos-rs = "0.3.0"
sysinfo = "0.30.5"
windows = "0.61.3"


